// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse the group of variants 1`] = `
{
  "end": 93,
  "expressions": [
    {
      "child": {
        "end": 93,
        "important": true,
        "key": {
          "end": 93,
          "source": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]):!bg-black",
          "start": 85,
          "text": "bg-black",
          "type": "Identifier",
        },
        "m": null,
        "source": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]):!bg-black",
        "start": 85,
        "text": "bg-black",
        "type": "Classname",
      },
      "end": 93,
      "source": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]):!bg-black",
      "start": 0,
      "text": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]):!bg-black",
      "type": "VariantSpan",
      "variant": {
        "end": 84,
        "expressions": [
          {
            "child": null,
            "end": 11,
            "source": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]",
            "start": 2,
            "text": "variant1:",
            "type": "VariantSpan",
            "variant": {
              "end": 11,
              "key": {
                "end": 10,
                "source": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]",
                "start": 2,
                "text": "variant1",
                "type": "Identifier",
              },
              "m": undefined,
              "source": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]",
              "start": 2,
              "text": "variant1:",
              "type": "SimpleVariant",
            },
          },
          {
            "child": {
              "closed": true,
              "end": 57,
              "expressions": [
                {
                  "child": null,
                  "end": 31,
                  "source": "!(variant1: variant2:(variant3:
		          
		variant4:",
                  "start": 22,
                  "text": "variant3:",
                  "type": "VariantSpan",
                  "variant": {
                    "end": 31,
                    "key": {
                      "end": 30,
                      "source": "!(variant1: variant2:(variant3:
		          
		variant4:",
                      "start": 22,
                      "text": "variant3",
                      "type": "Identifier",
                    },
                    "m": undefined,
                    "source": "!(variant1: variant2:(variant3:
		          
		variant4:",
                    "start": 22,
                    "text": "variant3:",
                    "type": "SimpleVariant",
                  },
                },
                {
                  "child": null,
                  "end": 56,
                  "source": "!(variant1: variant2:(variant3:
		          
		variant4:",
                  "start": 47,
                  "text": "variant4:",
                  "type": "VariantSpan",
                  "variant": {
                    "end": 56,
                    "key": {
                      "end": 55,
                      "source": "!(variant1: variant2:(variant3:
		          
		variant4:",
                      "start": 47,
                      "text": "variant4",
                      "type": "Identifier",
                    },
                    "m": undefined,
                    "source": "!(variant1: variant2:(variant3:
		          
		variant4:",
                    "start": 47,
                    "text": "variant4:",
                    "type": "SimpleVariant",
                  },
                },
              ],
              "important": false,
              "source": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]",
              "start": 21,
              "text": "(variant3:
		          
		variant4:)",
              "type": "Group",
            },
            "end": 57,
            "source": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]",
            "start": 12,
            "text": "variant2:(variant3:
		          
		variant4:)",
            "type": "VariantSpan",
            "variant": {
              "end": 21,
              "key": {
                "end": 20,
                "source": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]",
                "start": 12,
                "text": "variant2",
                "type": "Identifier",
              },
              "m": undefined,
              "source": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]",
              "start": 12,
              "text": "variant2:",
              "type": "SimpleVariant",
            },
          },
          {
            "end": 65,
            "important": false,
            "key": {
              "end": 65,
              "source": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]",
              "start": 58,
              "text": "unknown",
              "type": "Identifier",
            },
            "m": null,
            "source": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]",
            "start": 58,
            "text": "unknown",
            "type": "Classname",
          },
          {
            "closed": true,
            "decl": {
              "end": 81,
              "source": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]",
              "start": 67,
              "text": "unknown: value",
              "type": "Value",
            },
            "end": 82,
            "important": false,
            "source": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]",
            "start": 66,
            "text": "[unknown: value]",
            "type": "ArbitraryProperty",
          },
        ],
        "source": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]):!bg-black",
        "start": 0,
        "text": "!(variant1: variant2:(variant3:
		          
		variant4:) unknown [unknown: value]):",
        "type": "GroupVariant",
      },
    },
  ],
  "source": "!(variant1: variant2:(variant3:
		// comment
		variant4:) unknown [unknown: value]):!bg-black",
  "start": 0,
  "text": "!(variant1: variant2:(variant3:
		// comment
		variant4:) unknown [unknown: value]):!bg-black",
  "type": "Program",
}
`;

exports[`splitAtTopLevelOnly 1`] = `
[
  {
    "range": [
      0,
      17,
    ],
    "value": "bottom 0px center",
  },
]
`;

exports[`splitAtTopLevelOnly 2`] = `
[
  {
    "range": [
      0,
      11,
    ],
    "value": "min(0, 300)",
  },
]
`;

exports[`splitAtTopLevelOnly 3`] = `
[
  {
    "range": [
      0,
      16,
    ],
    "value": "min(0px, 200rem)",
  },
]
`;

exports[`splitAtTopLevelOnly 4`] = `
[
  {
    "range": [
      0,
      16,
    ],
    "value": "min(0rem, 200px)",
  },
]
`;

exports[`splitAtTopLevelOnly 5`] = `
[
  {
    "range": [
      0,
      3,
    ],
    "value": "top",
  },
  {
    "range": [
      4,
      9,
    ],
    "value": "right",
  },
]
`;

exports[`splitAtTopLevelOnly 6`] = `
[
  {
    "range": [
      0,
      3,
    ],
    "value": "top",
  },
  {
    "range": [
      4,
      9,
    ],
    "value": "right",
  },
  {
    "range": [
      10,
      23,
    ],
    "value": "[bottom,left]",
  },
]
`;

exports[`splitAtTopLevelOnly 7`] = `
[
  {
    "range": [
      0,
      3,
    ],
    "value": "top",
  },
  {
    "range": [
      4,
      9,
    ],
    "value": "right",
  },
  {
    "range": [
      10,
      23,
    ],
    "value": "[bottom,left]",
  },
  {
    "range": [
      25,
      40,
    ],
    "value": "min(0px, 200em)",
  },
]
`;

exports[`splitAtTopLevelOnly 8`] = `
[
  {
    "range": [
      0,
      3,
    ],
    "value": "top",
  },
  {
    "range": [
      4,
      9,
    ],
    "value": "right",
  },
  {
    "range": [
      10,
      42,
    ],
    "value": "'[bottom,left], min(0px, 200em)'",
  },
]
`;
